syntax = "proto2";
package cs;

//消息ID定义[范围1000-1100]
enum cs_gate{
  //[1000,1010]定义系统协议
  msg_id_req_heart_beat 	= 1001;

  //[1011-1100]定义业务协议
	msg_id_req_login_gate  = 1011;
}

// 心跳请求协议
message req_heart_beat{
}

// 心跳返回协议
message resp_heart_beat{
}

//登录gateway请求
message req_login_gate{
  optional int64  player_id = 1;
  optional string token     = 2;
}

//登录gateway返回
message resp_login_gate{
  optional int32  err_code = 1;
  optional string err_desc = 2;
}
